# byteTable

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  eslint.config.js  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pages.yml  publish-packages.yml  release.yml
docs/: AUTO_UPDATE.md  M0-scaffold-design-system.md  M1-workspace-rail-connect-screen.md  M10-fk-hop-column-insights.md  M11-inline-cell-editing.md  M12-mysql-postgres-ssh-tls.md  M13-redis-engine.md  M14-terminal-panel.md  M15-sql-import-export-explain.md  M16-generate-data.md  M17-dynamodb-engine.md  M18-mongodb-engine.md  M19-cassandra-engine.md  M2-sqlite-connections.md  M20-settings.md  M21-mssql-engine.md  M22-object-explorer.md  M23-oracle-engine.md  M3-sidebar-introspection.md  M4-tab-system-data-grid.md  M5-filter-builder.md  M6-sql-editor.md  M7-structure-view.md  M8-structure-editing.md  M9-schema-map.md  SSH_TUNNEL_TESTING.md  db-objects-test-plan.md
landing/: index.html
packaging/chocolatey/: README.md  bytetable.nuspec.template
packaging/chocolatey/tools/: chocolateyinstall.ps1.template
packaging/homebrew/: README.md  bytetable.rb.template
scripts/: bump-version.sh  codesign-dev.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: app.desktop
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engines/: mod.rs  ssh.rs
src-tauri/src/engines/cassandra/: error.rs  mod.rs  reader.rs  value.rs  writer.rs
src-tauri/src/engines/clickhouse/: error.rs  http.rs  introspect.rs  mod.rs  mutate.rs  objects.rs  query.rs  sql.rs  structure.rs  value.rs
src-tauri/src/engines/dynamo/: error.rs  mod.rs  reader.rs  value.rs  writer.rs
src-tauri/src/engines/mongo/: error.rs  mod.rs  reader.rs  value.rs  writer.rs
src-tauri/src/engines/mssql/: bulk.rs  error.rs  integration.rs  introspect.rs  mod.rs  mutate.rs  objects.rs  query.rs  sql.rs  structure.rs
src-tauri/src/engines/mysql/: bulk.rs  error.rs  integration.rs  introspect.rs  mod.rs  mutate.rs  objects.rs  query.rs  sql.rs  structure.rs
src-tauri/src/engines/oracle/: error.rs  introspect.rs  mod.rs  objects.rs  query.rs  sql.rs
src-tauri/src/engines/postgres/: bulk.rs  error.rs  integration.rs  introspect.rs  mod.rs  mutate.rs  objects.rs  query.rs  sql.rs  structure.rs
src-tauri/src/engines/redis/: error.rs  mod.rs  reader.rs  value.rs  writer.rs
src-tauri/src/engines/sqlite/: bulk.rs  error.rs  introspect.rs  mod.rs  mutate.rs  objects.rs  query.rs  sql.rs  structure.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/browse/: application.rs  commands.rs  mod.rs
src-tauri/src/features/cassandra/: application.rs  commands.rs  mod.rs
src-tauri/src/features/connections/: commands.rs  mod.rs  ports.rs  secrets.rs
src-tauri/src/features/connections/application/: mod.rs
src-tauri/src/features/connections/domain/: mod.rs
src-tauri/src/features/connections/infrastructure/: mod.rs
src-tauri/src/features/dynamo/: application.rs  commands.rs  mod.rs
src-tauri/src/features/export/: application.rs  commands.rs  mod.rs
src-tauri/src/features/export/domain/: mod.rs
src-tauri/src/features/generate/: application.rs  commands.rs  domain.rs  generators.rs  mod.rs  planner.rs
src-tauri/src/features/insights/: application.rs  commands.rs  mod.rs
src-tauri/src/features/introspection/: application.rs  commands.rs  mod.rs
src-tauri/src/features/keyvalue/: application.rs  commands.rs  mod.rs
src-tauri/src/features/mongo/: application.rs  commands.rs  mod.rs
src-tauri/src/features/mutate/: application.rs  commands.rs  mod.rs
src-tauri/src/features/preferences/: commands.rs  ports.rs
src-tauri/src/features/preferences/application/: mod.rs
src-tauri/src/features/preferences/domain/: mod.rs
src-tauri/src/features/preferences/infrastructure/: mod.rs
src-tauri/src/features/saved_queries/: commands.rs  mod.rs  ports.rs
src-tauri/src/features/saved_queries/application/: mod.rs
src-tauri/src/features/saved_queries/domain/: mod.rs
src-tauri/src/features/saved_queries/infrastructure/: mod.rs
src-tauri/src/features/schema_map/: commands.rs  mod.rs  ports.rs  render.rs
src-tauri/src/features/schema_map/application/: mod.rs
src-tauri/src/features/schema_map/domain/: mod.rs
src-tauri/src/features/schema_map/infrastructure/: mod.rs
src-tauri/src/features/settings/: commands.rs  mod.rs  ports.rs
src-tauri/src/features/settings/application/: mod.rs
src-tauri/src/features/settings/domain/: mod.rs
src-tauri/src/features/settings/infrastructure/: mod.rs
src-tauri/src/features/structure/: commands.rs  mod.rs
src-tauri/src/features/structure/application/: mod.rs
src-tauri/src/features/structure/domain/: mod.rs
src-tauri/src/shared/: document.rs  engine.rs  error.rs  keyvalue.rs  mod.rs  mongo.rs
src-tauri/src/shared/ports/: mod.rs  mongo.rs  widecolumn.rs
src-tauri/src/shared/ports/sql/: binary.rs  conn.rs  meta.rs  mod.rs  mutate.rs  params.rs  query.rs  script.rs  tests.rs
src-tauri/src/slices/: mod.rs
src-tauri/src/slices/preferences/: commands.rs  mod.rs
src-tauri/src/slices/preferences/application/: mod.rs
src-tauri/src/slices/preferences/infrastructure/: mod.rs
src-tauri/tests/: dynamo_integration.rs  redis_integration.rs
src/dev/: Gallery.css  Gallery.tsx
src/features/browse/: filter.ts  (+1 more)
src/shared/: homeDir.ts  types.ts
test-fixtures/: README.md  byteshop.db  docker-compose.tunnel.yml  docker-compose.yml
test-fixtures/seed/: cassandra.cql  clickhouse.sql  mongo.js  mssql.sql  mysql.sql  oracle.sql  postgres.sql  seed-cassandra.sh  seed-dynamo.sh  seed-mssql.sh  seed-redis.sh  sqlite.sql
(+349 files in other folders)
