[package]
name = "bytetable"
version = "0.1.0"
description = "A free open-source local-first desktop database client"
authors = ["ByteTable contributors"]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bytetable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tokio = { version = "1.52.3", features = ["sync", "rt"] }
rusqlite = { version = "0.37", features = ["bundled", "column_decltype"] }
# Used by the schema_map slice to decode base64 PNG export bytes received over
# IPC (base64 is ~1.33× the raw size vs. ~10× for a JSON number array).
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.52.3", features = ["sync", "rt", "macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
