[package]
name = "bytetable"
version = "0.1.0"
description = "A free open-source local-first desktop database client"
authors = ["ByteTable contributors"]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bytetable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
# In-app auto-updater: checks the GitHub release `latest.json`, downloads the
# signed artifact for the current OS, installs it, and relaunches (via the
# process plugin). Desktop-only.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
# `net` + `io-util` + `time` are added in M12 Task 3 for the SSH tunnel
# (`TcpListener`/`TcpStream`, `copy_bidirectional`, connect timeouts); russh
# also drives I/O on this runtime.
tokio = { version = "1.52.3", features = ["sync", "rt", "net", "io-util", "time", "macros"] }
rusqlite = { version = "0.37", features = ["bundled", "column_decltype"] }
# Async-native driver for the server engines (M12). `runtime-tokio` matches
# Tauri's tokio runtime, so the async EngineConnection methods await the pool
# directly — no spawn_blocking, unlike the rusqlite adapter. `tls-rustls` is a
# pure-Rust TLS stack (no OpenSSL system dependency). Pinned to the 0.8 line:
# stable, MSRV well below rustc 1.89, and compatible with the tokio 1.52 already
# in the tree. M12 Task 1 added `postgres`; Task 2 adds `mysql` (the MySQL
# adapter `engines::mysql`, mirroring the Postgres one).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    # NUMERIC/DECIMAL arrive over the wire in a binary format sqlx cannot decode
    # to a primitive; `bigdecimal` lets us decode to an arbitrary-precision
    # `BigDecimal` and stringify it without precision loss (the CellValue
    # precision contract — see the adapter's `decode_value`).
    "bigdecimal",
] }
# DATE/DATETIME/TIMESTAMP/TIME come over the binary protocol as temporal values,
# not strings — without chrono Decode impls sqlx returns them as NULL (the
# "timestamps don't show" bug). We enable `chrono` on the MySQL + Postgres
# sub-crates directly (same crate instances the facade uses; additive) rather
# than via the facade `chrono` feature, because that feature's
# `sqlx-sqlite?/chrono` line drags in `sqlx-sqlite`, which conflicts with our
# `rusqlite` (both link the native `sqlite3`). The sub-crate `chrono` feature
# transitively enables `sqlx-core/chrono`, so `sqlx::types::chrono` is available.
sqlx-mysql = { version = "=0.8.6", default-features = false, features = ["chrono"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["chrono"] }
# Used by the schema_map slice to decode base64 PNG export bytes received over
# IPC (base64 is ~1.33× the raw size vs. ~10× for a JSON number array).
base64 = "0.22"
# OS keychain for server-connection secrets (M12 Task 3): the database password
# and the SSH password/key-passphrase are stored here keyed by the saved
# connection id, never in the JSON registry. `apple-native` uses the macOS
# Keychain Services; `windows-native` / `sync-secret-service` cover the other
# desktop targets ByteTable ships to. Behind the `SecretStore` port so the
# orchestration is unit-testable with an in-memory fake (mirrors the repository
# pattern).
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
# Pure-Rust async SSH client for the M12 Task 3 tunnel (local listener → SSH
# `direct-tcpip` channel → bastion → db host:port). Chosen over `ssh2`/libssh2
# deliberately: russh needs no system OpenSSL/libssh2 (matching the `tls-rustls`
# choice for sqlx), is async-native on the tokio runtime already in the tree,
# and cross-compiles cleanly for the release profile. Key handling (load a
# private key from disk, decrypt a passphrase-protected key, talk to the
# ssh-agent) lives in the re-exported `russh::keys` module.
russh = "0.61"
# Redis driver for the M13 key-value engine. The `tokio-comp` feature drives
# the async multiplexed connection on the tokio runtime already in the tree
# (Tauri's runtime), so the async `KeyValueConnection` methods await the driver
# directly — no spawn_blocking, mirroring the sqlx adapters. `tls-rustls` +
# `tls-rustls-webpki-roots` give a pure-Rust TLS stack (no OpenSSL system
# dependency), matching the `tls-rustls` choice for sqlx and `russh`'s rustls;
# cargo unifies on the single rustls 0.23 already in the dependency tree.
# Pinned to the 0.27 line: it is async-native on tokio 1.x, builds on rustc
# 1.89 with an MSRV well below it, and is the last 0.x line before the 1.0
# rename — a conservative, widely-deployed choice consistent with the rest of
# the tree's "0.x, stable, rustls" driver picks.
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "keep-alive",
] }

[dev-dependencies]
tempfile = "3"
# `rt-multi-thread` is needed by the Postgres integration tests: sqlx's
# `#[tokio::test]` pool work and the connector both expect a real runtime. The
# library code itself runs on Tauri's runtime and needs only `sync`/`rt`.
tokio = { version = "1.52.3", features = ["sync", "rt", "rt-multi-thread", "macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
